--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -2,6 +2,7 @@
   borderless = True
   enabled_plugins = ,
   scroll_tabbar = True
+  tab_position = bottom
   title_receive_bg_color = "#4e9a06"
   title_transmit_bg_color = "#204a87"
 [keybindings]
@@ -18,7 +19,6 @@
   [[default]]
     background_color = "#300a24"
     background_darkness = 0.75
-    background_type = transparent
     cursor_color = "#aaaaaa"
     foreground_color = "#ffffff"
     icon_bell = False
