--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -1,53 +1,43 @@
-# Install i3blocks contrib scripts.
-#
-# git clone https://github.com/vivien/i3blocks-contrib ~/.config/i3blocks
-#
-command=~/.config/i3blocks/$BLOCK_NAME
+command=~/.config/i3blocks/$BLOCK_NAME/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
 [kbdd_layout]
-command=kbdd_layout/kbdd_layout
 interval=persist
 
-[volume]
-command=volume/volume
-label=♪
+[volume-pulseaudio]
 interval=once
 signal=10
 
 [iface]
-command=iface/iface
+LABEL=
 IFACE=enp0s31f6
 color=#00FF00
 interval=10
 
 [iface]
-command=iface/iface
-label=
+LABEL=
 IFACE=wlp2s0
 color=#00FFFF
 interval=10
 
 [wifi]
-command=wifi/wifi
 INTERFACE=wlp2s0
 interval=60
 
 [nm-vpn]
-command=nm-vpn/nm-vpn
-label=VPN:
 interval=5
 
+[bluetooth]
+interval=10
+
 [battery]
-command=battery2/battery2
 markup=pango
 interval=30
 
 [rofi-calendar]
-command=rofi-calendar/rofi-calendar
-interval=3600
 LABEL=
+interval=3600
 
 [time]
 command=echo -n "  "; date '+%r'
