--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -1,27 +1,28 @@
 [global_config]
   borderless = True
-  enabled_plugins = ,
-  scroll_tabbar = True
   tab_position = bottom
-  title_receive_bg_color = "#4e9a06"
+  scroll_tabbar = True
   title_transmit_bg_color = "#204a87"
+  title_receive_bg_color = "#4e9a06"
+  enabled_plugins = ,
 [keybindings]
+[profiles]
+  [[default]]
+    visible_bell = True
+    icon_bell = False
+    background_color = "#300a24"
+    background_darkness = 0.75
+    cursor_color = "#aaaaaa"
+    foreground_color = "#ffffff"
+    scrollbar_position = hidden
+    scrollback_infinite = True
 [layouts]
   [[default]]
     [[[child1]]]
       parent = window0
       type = Terminal
+      profile = default
     [[[window0]]]
       parent = ""
       type = Window
 [plugins]
-[profiles]
-  [[default]]
-    background_color = "#300a24"
-    background_darkness = 0.75
-    cursor_color = "#aaaaaa"
-    foreground_color = "#ffffff"
-    icon_bell = False
-    scrollback_infinite = True
-    scrollbar_position = hidden
-    visible_bell = True
