--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
 [diff]
 	colorMoved = default
 	tool = vimdiff
+	renamelimit = 3000
 [interactive]
 	diffFilter = delta --color-only --features=interactive
 [merge]
