--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,15 +1,15 @@
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'dracula/tmux'
 
-set -g @themepack 'powerline/block/yellow'
-set -g @themepack-status-right-area-left-format ''
-set -g @themepack-status-right-area-middle-format ''
+set -g @dracula-show-powerline true
+set -g @dracula-show-left-icon session
+set -g @dracula-plugins " "
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-vim 'session'
