--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -1,6 +1,6 @@
 command=~/.config/i3blocks/$BLOCK_NAME/$BLOCK_NAME
 separator_block_width=15
-markup=none
+markup=pango
 
 [kbdd_layout]
 interval=persist
@@ -15,6 +15,7 @@ IFACE=enx98e743ab99c9
 color=#00FF00
 interval=10
 
+
 [iface]
 label=
 IFACE=wlo1
@@ -22,6 +23,7 @@ color=#00FFFF
 interval=10
 
 [wifi]
+label= 
 INTERFACE=wlo1
 interval=60
 
@@ -33,17 +35,17 @@ interval=5
 interval=10
 
 [cpu_usage]
-interval=10
-label=🔥 
+label=🖥 
 DECIMALS=1
+interval=10
 
 [memory]
-label=🐏 
+label=  
 interval=30
 
 [battery]
+label=🔋 
 interval=30
-label=⚡ 
 
 [rofi-calendar]
 label=
@@ -65,6 +67,7 @@ command=TZ=":Asia/Taipei" date '+%r'
 interval=60
 
 [time]
-command=echo -n " "; date '+%r'
+label= 
+command=date '+%r'
 interval=5
 
