--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,9 @@
+# Basic configuration
+set -g base-index 1
 set -g default-terminal "tmux-256color"
+set -gw mode-keys vi
 
+# Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
