--- a/.config/nitrogen/bg-saved.cfg
+++ b/.config/nitrogen/bg-saved.cfg
@@ -1,4 +1,9 @@
-[xin_-1]
+[xin_0]
+file=/home/aclaro/.backgrouds/wallpaper-1.jpg
+mode=5
+bgcolor=#000000
+
+[xin_1]
 file=/home/aclaro/.backgrouds/wallpaper-1.jpg
 mode=5
 bgcolor=#000000
