--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -9,12 +9,14 @@ interval=persist
 interval=once
 signal=10
 
+[bluetooth]
+interval=10
+
 [iface]
 label=
 IFACE=enx98e743ab99c9
 color=#00FF00
 interval=10
-
 
 [iface]
 label=
@@ -31,9 +33,6 @@ interval=60
 label=VPN 
 interval=5
 
-[bluetooth]
-interval=10
-
 [cpu_usage]
 label= 
 DECIMALS=1
@@ -48,8 +47,8 @@ interval=30
 label=  
 interval=30
 
-[rofi-calendar]
-label=
+[calendar]
+label= 
 interval=3600
 
 [time]
