--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,7 @@ set -g @dracula-plugins " "
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-vim 'session'
-set -g @continuum-restore 'on'
+set -g @continuum-restore 'off'
 
 run '~/.tmux/plugins/tpm/tpm'
 
