--- a/.config/autostart/04-nitrogen.desktop
+++ b/.config/autostart/04-nitrogen.desktop
@@ -2,5 +2,6 @@
 Name=Nitrogen
 Comment=Desktop background setter for X Window
 Type=Application
-Exec=nitrogen --restore
+Exec=bash -c "sleep 20 && nitrogen --restore"
 StartupNotify=false
+X-GNOME-Autostart-Delay=20
