--- a/.config/notmuch/config
+++ b/.config/notmuch/config
@@ -3,7 +3,7 @@ path=.mail/work
 
 [user]
 name=Alejandro Claro
-primary_email=alejandro.claro@smartmatic.com
+primary_email=alejandro.claro@xxx.com
 
 [new]
 tags=unread;inbox;
