--- a/.davmail.properties
+++ b/.davmail.properties
@@ -24,7 +24,7 @@ davmail.keepDelay=30
 davmail.ldapPort=1389
 davmail.logFilePath=
 davmail.logFileSize=
-davmail.mode=O365Interactive
+davmail.mode=O365Manual
 davmail.noProxyFor=
 davmail.oauth.clientId=
 davmail.oauth.redirectUri=
@@ -38,8 +38,8 @@ davmail.proxyPort=
 davmail.proxyUser=
 davmail.sentKeepDelay=0
 davmail.server.certificate.hash=
-davmail.server=false
-davmail.showStartupBanner=true
+davmail.server=true
+davmail.showStartupBanner=false
 davmail.smtpPort=1025
 davmail.smtpSaveInSent=true
 davmail.ssl.clientKeystoreFile=
