--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 # Basic configuration
 set -g base-index 1
 set -g default-terminal "tmux-256color"
+set -as terminal-overrides ",xterm*:Tc"
 set -gw mode-keys vi
 
 # Plugins
