--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,5 @@
 # Basic configuration
 set -g base-index 1
-set -g default-terminal "tmux-256color"
-set -as terminal-overrides ",xterm*:Tc"
 set -gw mode-keys vi
 
 # Plugins
@@ -19,6 +17,13 @@ set -g @dracula-plugins " "
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-vim 'session'
 set -g @continuum-restore 'off'
+
+set -g  default-terminal "alacritty"
+set -sa default-terminal "alacritty"
+set -sa terminal-overrides ",*:Tc"
+set -sa terminal-overrides ",*:RGB"
+set -sa terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -sa terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m' # colored underscores
 
 run '~/.tmux/plugins/tpm/tpm'
 
