--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,12 +3,13 @@ set -g base-index 1
 set -gw mode-keys vi
 
 # Plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'dracula/tmux'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'alexwforsythe/tmux-which-key'
 
 set -g @dracula-show-powerline true
 set -g @dracula-show-left-icon session
@@ -18,8 +19,7 @@ set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-vim 'session'
 set -g @continuum-restore 'off'
 
-set -g  default-terminal "alacritty"
-set -sa default-terminal "alacritty"
+set -g  default-terminal "tmux-256color"
 set -sa terminal-overrides ",*:Tc"
 set -sa terminal-overrides ",*:RGB"
 set -sa terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
